filling in information

--- a/DM2024-Lab1-Homework.ipynb
+++ b/DM2024-Lab1-Homework.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name: Pei Ling An 安珮綾\n",
     "\n",
-    "Student ID:\n",
+    "Student ID: 110540017\n",
     "\n",
-    "GitHub ID:"
+    "GitHub ID: Annisme"
    ]
   },
   {
