--- a/DM2024-Lab1-Homework.ipynb
+++ b/DM2024-Lab1-Homework.ipynb
@@ -59,6 +59,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "for Q4,\n",
+    "I think use TFidF is more effecient way to do data mining from such a large dataset in master. When I am doing this homework, I found that use frequency is not a ideal way because the number of \n",
+    "frequency might be very large. \n",
+    "As a result, we may need to use another way to transform data. \n",
+    "As for others, to be honest, I don't have a lot of coding experience, this is my first time, so I don't quite know about what are those \"inefficient parts\". But I do think TFidF is the better way to deal with the dataset in Master\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### Begin Assignment Here\n",
     "!pip install jupyter numpy pandas matplotlib plotly nltk scikit-learn seaborn pami umap-learn"
    ]
